--- a/tegel/src/components/header/webcomponent/header-dropdown-list-item/header-dropdown-list-item.scss
+++ b/tegel/src/components/header/webcomponent/header-dropdown-list-item/header-dropdown-list-item.scss
@@ -5,7 +5,6 @@
   box-sizing: border-box;
   height: var(--sdds-list-item-md-height);
   width: 100%;
-  border-bottom: 1px solid var(--sdds-nav-dropdown-item-border-color);
 
   .component {
     height: 100%;
@@ -48,6 +47,10 @@
       }
     }
   }
+}
+
+:host(:not(:last-child)) {
+  border-bottom: 1px solid var(--sdds-nav-dropdown-item-border-color);
 }
 
 :host([type='lg']) {
